# fcsr

./: Cargo.toml  README.md
crates/fcsr_cli/: Cargo.toml
crates/fcsr_cli/src/: main.rs
crates/fcsr_config/: Cargo.toml
crates/fcsr_config/src/: config.rs  dependency_graph.rs  lib.rs  written.rs
crates/fcsr_core/: Cargo.toml
crates/fcsr_core/src/: add.rs  init.rs  lib.rs  version.rs
crates/fcsr_git/: Cargo.toml
crates/fcsr_metadata/: Cargo.toml
crates/fcsr_metadata/src/: add.rs  init.rs  lib.rs  version.rs
crates/fcsr_pkg/: Cargo.toml
crates/fcsr_pkg/src/: lib.rs  packages.rs  pkg_json.rs
crates/fcsr_tools/: Cargo.toml
crates/fcsr_tools/src/: lib.rs  packages.rs
crates/fcsr_tools/src/find/: find_root.rs  mod.rs
