[workspace]
resolver = "2"
members = [
  "crates/*"
]

[workspace.package]
authors = ["Asarua <asarua@icloud.com>"]

[workspace.dependencies]
anyhow = "1.0.75"
thiserror = "1.0.50"
clap = { version = "4.4.6" }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
once_cell = { version = "1.18.0" }
colored = "2.0.4"
