[package]
name = "fcsr_cli"
version = "0.1.0"
edition = "2021"
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true, version = "1.0.75"}
thiserror.workspace = true
clap = { workspace = true, features = ["derive"] }
fcsr_metadata = { path = "../fcsr_metadata"}
fcsr_core = { path = "../fcsr_core"}
